Fixed scrollbar customization for Firefox.

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,8 @@
     background-color: #0e0d0d;
     font-family: Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
+    scrollbar-width: thin;
+    scrollbar-color: rgba(255, 255, 255, 0.1) rgba(255, 255, 255, 0.1);
 }
 
 
